# krill

./: Cargo.toml  README.md  journal.md
notes/python-proto/: ncurses-ui.py  orca_format.py  orca_operators.py  orca_utils.py
src/: main.rs
