[package]
name = "krill"
version = "0.1.0"
authors = ["David Cournapeau <cournape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
